--- a/Index.html
+++ b/Index.html
@@ -4,82 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyecto Manos Verdes</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f0fdf4;
-      color: #333;
-    }
-    header {
-      background: url("https://images.unsplash.com/photo-1524593119773-531f3f34c27e?auto=format&fit=crop&w=1600&q=80") no-repeat center center;
-      background-size: cover;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-      position: relative;
-    }
-    header::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-    }
-    header img {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 90px;
-      z-index: 2;
-    }
-    header h1, header p {
-      position: relative;
-      z-index: 2;
-    }
-    nav {
-      background: #2e7d32;
-      padding: 12px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    nav a:hover {
-      color: #c8e6c9;
-      text-decoration: underline;
-    }
-    section {
-      padding: 40px;
-      max-width: 950px;
-      margin: auto;
-    }
-    h2 {
-      color: #1b5e20;
-      border-bottom: 2px solid #66bb6a;
-      padding-bottom: 8px;
-    }
-    .box {
-      background: #e8f5e9;
-      padding: 20px;
-      border-left: 6px solid #1b5e20;
-      margin-bottom: 25px;
-      border-radius: 6px;
-    }
-    footer {
-      background: #1b5e20;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
-    }
-  </style>
+  <link rel="stylesheet" href="Assets/Css/Styles.css">
 </head>
 <body>
   <header>
