--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Escudo_de_la_Polic%C3%ADa_Nacional_de_Colombia.svg" alt="Escudo Policía Nacional">
+    <img src="Assets/Img/Escudo Policia.png" alt="Escudo Policía Nacional">
     <h1>Proyecto Manos Verdes</h1>
     <p>Conservación de plantas nativas y educación ambiental en Facatativá</p>
   </header>
