--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Assets/Img/Escudo Policia.png" alt="Escudo Policía Nacional">
+    <img src="Assets/Img/EscudoPolicia.png" alt="Escudo Policía Nacional">
     <h1>Proyecto Manos Verdes</h1>
     <p>Conservación de plantas nativas y educación ambiental en Facatativá</p>
   </header>
